# data-science-assignments

./: .gitignore  README.md  pyproject.toml
notebooks/: assignment_1_numpy.ipynb  assignment_2_kmeans.ipynb  assignment_3_scipy-1.ipynb  assignment_4_scipy-2.ipynb  assignment_5_pandas.ipynb  assignment_6_sklearn.ipynb
