[project]
name = "data-science-assignments"
version = "0.1.0"
description = "Data Science (CoSc 6262) Assignments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
[tool.setuptools]
py-modules = []
